--- a/index.html
+++ b/index.html
@@ -24,22 +24,40 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./static-files/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="p-2 text-center" >
+    <header class="p-2 text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
       <div id="date-navigation">
-        <button type="button" class="btn btn-primary date-nav-link" id="date-prev">< Prev</button>
-        <button type="button" class="btn btn-info date-nav-link" id="date-today">Today</button>
-        <button type="button" class="btn btn-primary date-nav-link" id="date-next">Next ></button>
+        <button
+          type="button"
+          class="btn btn-primary date-nav-link"
+          id="date-prev"
+        >
+          < Prev
+        </button>
+        <button
+          type="button"
+          class="btn btn-info date-nav-link"
+          id="date-today"
+        >
+          Today
+        </button>
+        <button
+          type="button"
+          class="btn btn-primary date-nav-link"
+          id="date-next"
+        >
+          Next >
+        </button>
       </div>
     </header>
-    
+
     <!-- container to hold the diary schedule -->
     <div class="container-fluid px-5" id="schedule-container"></div>
 
@@ -60,6 +78,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./static-files/js/script.js"></script>
   </body>
 </html>
