Fixed normalize.css href

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!----  normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
         normalize styles to standard values across browsers -->
-    <link rel="stylesheet" href="./assets/css/normalize.css" />
+    <link rel="stylesheet" href="./static-files/css/normalize.css" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -110,7 +110,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- This Web Application -->
+    <!-- This Web Application's javascript -->
     <script src="./static-files/js/script.js"></script>
   </body>
 </html>
